2024-07-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): marked as obsolete.
	(find-newbrowser2-links): new function.

2024-07-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-dot-emacs-links): point to
	<http://anggtwu.net/2024-find-dot-emacs-links.html>.

	* eev-intro.el (find-dot-emacs-intro): point to
	<http://anggtwu.net/2024-find-dot-emacs-links.html>.

2024-07-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-melpa, ee-dot-emacs-lean4): new
	functions.

2024-07-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-dot-emacs-links, ee-dot-emacs-concat)
	(ee-dot-emacs-eev, ee-dot-emacs-mfms, ee-dot-emacs-angges)
	(ee-dot-emacs-maxima5470, ee-dot-emacs-epl): new functions.

	* eev-intro.el (find-windows-beginner-intro): small changes.

2024-07-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-debootstrap1): new argument: `container'.

2024-07-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new video:
	"2024algpergs".

2024-07-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev.el: bumped the version.

	* eev-intro.el (find-windows-beginner-intro): added a "sudo
	apt-get update" and a "sudo apt-get upgrade -y".

2024-07-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-lean4-intro): rewritten completely.

	* eev-lean4.el: lots of changes.

2024-06-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-ecolor-links): small changes.

2024-06-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rstdoc.el (find-code-rstdoc): use `ee-buffer-name'.

	* eev-load.el: added a "(require 'eev-lean4)" (commented out).

	* eev-rstdoc.el (ee-code-rstdoc): added "(defun {killf} ...)".

2024-06-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-copy-rest-3m): new function.

2024-05-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-dot-emacs-intro): major rewrite.